# UntitledEngine

./: .gitignore  CMakeLists.txt  LICENSE
engine/: CMakeLists.txt
engine/src/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/src/runtime/core/base/: macro.h  uuid.cpp  uuid.h
engine/src/runtime/core/exception/: base_exception.h
engine/src/runtime/core/file/: file_system.cpp  file_system.h
engine/src/runtime/core/log/: log_system.cpp  log_system.h
engine/src/runtime/core/meta/reflection/: reflection.cpp  reflection.h
engine/src/runtime/core/meta/serialization/: serializer.cpp  serializer.h
engine/src/runtime/core/object/: object_pool.cpp  object_pool.h  utobject.cpp  utobject.h
engine/src/runtime/function/entity/: character.cpp  character.h  entity.cpp  entity.h  entity_wrapper.cpp  entity_wrapper.h  env_entity.cpp  env_entity.h
engine/src/runtime/function/global/: global_context.cpp  global_context.h
engine/src/runtime/function/input/: input_system.cpp  input_system.h
engine/src/runtime/function/render/: camera.cpp  camera.h  camera_system.cpp  camera_system.h  render_system.cpp  render_system.h  shader.cpp  shader.h  texture.cpp  texture.h
engine/src/runtime/function/window/: window_create_info.h  window_system.cpp  window_system.h
engine/src/runtime/function/world/: quad_tree.cpp  quad_tree.h  scene.cpp  scene.h  world.cpp  world.h
engine/src/runtime/resource/: resource_system.cpp  resource_system.h
src/: CMakeLists.txt  logo.aps  main.cpp
src/runtime/: CMakeLists.txt  Engine.cpp  Engine.h
src/runtime/core/: macro.h  type.h
src/runtime/core/math/: Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  math.cpp  math.h
src/test/: CMakeLists.txt  main.cpp
